# sentiment-news-tests-workbench

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  analyze.py  convert_onnx.py  docker-compose.yml  news.txt  pyproject.toml  requirements-convert.txt  requirements.txt  server.py  sym_shape_infer_temp.onnx  test.py  test_converted_model.py  train.py
src/sentiment_api/: __init__.py  main.py
src/sentiment_api/api/: routes.py
src/sentiment_api/core/: __init__.py  config.py  exceptions.py  metrics.py  utils.py
src/sentiment_api/services/: __init__.py  cache.py  detector.py  gemini.py  normalize.py  router.py  sentiment.py
tests/: body.txt  fast_test.py  summarize_body.py  summarizer.py  summarizer_server.py
