[project]
name = "sentiment-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "transformers",
    "onnxruntime",
    "numpy",
    "requests",
]

[dependency-groups]
export = [
    "optimum[onnxruntime]",
    "torch",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
