[project]
name = "sentiment-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "transformers>=4.36.0",
    "onnxruntime>=1.16.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
]

[dependency-groups]
export = [
    "optimum[onnxruntime]",
    "torch",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
